--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ APP_SECRET=4d3b5fd1f7422425c2d3d662392aaa0b
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="mysql://root@127.0.0.1:3306/projetDog?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://dogacademytestsymfony:testDlColmar67@default
+###< symfony/google-mailer ###
